# toon-validate

./: .gitignore  Cargo.toml  README.md  test.sh
crates/toon-validate-cli/: Cargo.toml
crates/toon-validate-cli/src/: analyze.rs  check.rs  commands.rs  lib.rs  main.rs  profile.rs
crates/toon-validate-cli/tests/: cli_integration.rs
crates/toon-validate-core/: Cargo.toml
crates/toon-validate-core/src/: error.rs  json_parser.rs  lib.rs  parser.rs  token_estimator.rs  toon_parser.rs  validator.rs  value.rs
src/: main.rs
tests/: example.json  example.toon  invalid.toon  simple.toon  simple_table.toon
