[workspace]
members = ["crates/toon-validate-core", "crates/toon-validate-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Unlicense"
authors = ["eznj"]
rust-version = "1.90"
documentation = "https://docs.rs/toon-validate"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
prettytable-rs = "0.10"
walkdir = "2.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
