[package]
name = "toon-validate-cli"
description = "Command-line interface for TOON validation and analysis"
repository = "https://github.com/eznj/toon-validate"
keywords = ["toon", "cli", "validation"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tval"
path = "src/main.rs"

[dependencies]
toon-validate-core = { path = "../toon-validate-core", version = "0.1.0" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prettytable-rs = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"